# WeatherApp

./: .gitignore  CMakeLists.txt  README.md  api_call.cpp  api_call.h  application.cpp  application.h  main.cpp  open_weather.cpp  open_weather.h  weather.h  weather_api.cpp  weather_api.h  weather_struct.cpp  weather_struct.h
